--- a/Новая папка/kiss/index.css
+++ b/Новая папка/kiss/index.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   background-color: #FDF6EB;
 }
@@ -13,29 +9,17 @@ body {
 
 .header {
   display: flex;
-  height: 67px;
   width: 100%;
+  height: 128px;
   border-bottom: 3px solid black;
-}
-@media screen and (min-width: 600px) {
-  .header {
-    height: 128px;
-    border-bottom: 3px solid black;
-  }
 }
 
 .cartx {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-right: none;
-  width: 100%;
-}
-@media screen and (min-width: 600px) {
-  .cartx {
-    width: 300px;
-    border-right: 3px solid black;
-  }
+  width: 300px;
+  border-right: 3px solid black;
 }
 
 .cartx_pic {
@@ -44,15 +28,10 @@ body {
 }
 
 .menu {
-  display: none;
-}
-@media screen and (min-width: 600px) {
-  .menu {
-    width: 814px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 814px;
 }
 
 .home {
@@ -100,33 +79,20 @@ body {
 }
 
 .likes {
-  display: none;
-}
-@media screen and (min-width: 600px) {
-  .likes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 300px;
-    border-left: 3px solid black;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  border-left: 3px solid black;
 }
 
 .main_content {
-  margin-left: 54px;
+  margin-left: 134px;
   margin-bottom: 73px;
   height: 867px;
   width: 85%;
   border: 3px solid black;
   border-top: none;
-}
-@media screen and (min-width: 600px) {
-  .main_content {
-    margin-left: 134px;
-    margin-bottom: 73px;
-    height: 867px;
-    width: 85%;
-  }
 }
 
 .me {
@@ -142,42 +108,30 @@ body {
 }
 
 .next {
-  height: 92px;
-  width: 257px;
-  text-align: left;
+  height: 157px;
+  width: 477px;
+  left: 172px;
+  top: 206px;
+  border-radius: nullpx;
   font-family: "Nunito Sans";
-  font-size: 34px;
+  font-size: 62px;
   font-weight: 600;
-}
-@media screen and (min-width: 600px) {
-  .next {
-    width: 477px;
-    height: 157px;
-    font-family: "Nunito Sans";
-    font-size: 62px;
-    line-height: 95px;
-    letter-spacing: 0.016em;
-    text-align: left;
-  }
+  line-height: 95px;
+  letter-spacing: 0.016em;
+  text-align: left;
 }
 
 .everyone {
-  line-height: 33px;
-  letter-spacing: 0.05em;
+  height: 66px;
+  width: 521px;
+  margin-top: 6%;
   border-radius: nullpx;
   font-family: "Nunito Sans";
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 33px;
+  letter-spacing: 0.05em;
   text-align: left;
-}
-@media screen and (min-width: 600px) {
-  .everyone {
-    height: 66px;
-    width: 521px;
-    margin-top: 6%;
-    border-radius: nullpx;
-    font-family: "Nunito Sans";
-    font-size: 22px;
-    font-weight: 300;
-  }
 }
 
 .price {
@@ -218,48 +172,22 @@ body {
 
 .picture_watch {
   border: 3px solid black;
-  height: 486px;
-  width: 327px;
+  height: 614px;
+  width: 410px;
   position: absolute;
-  margin-left: 56.4%;
+  margin-left: 56.9%;
   margin-top: -44.4%;
   background-color: #FE682F;
 }
-@media screen and (min-width: 600px) {
-  .picture_watch {
-    height: 619px;
-    width: 418px;
-    margin-left: 56.4%;
-    margin-top: -44.4%;
-  }
-}
 
 .img {
-  border-radius: 49%;
-  height: 486px;
-  width: 327px;
-}
-@media screen and (min-width: 600px) {
-  .img {
-    width: 410px;
-    height: 614px;
-  }
+  border-radius: 220px;
 }
 
 .star {
   position: absolute;
-  margin-top: -28%;
-  margin-left: 42%;
-  width: 87px;
-  height: 80px;
-}
-@media screen and (min-width: 600px) {
-  .star {
-    width: 116px;
-    height: 115px;
-    margin-top: -12%;
-    margin-left: 23%;
-  }
+  margin-top: -11%;
+  margin-left: 22%;
 }
 
 .arrow1 {
