--- a/kiss/index.css
+++ b/kiss/index.css
@@ -115,7 +115,7 @@ body {
 .main_content {
   margin-left: 54px;
   margin-bottom: 73px;
-  height: 867px;
+  height: 1669px;
   width: 85%;
   border: 3px solid black;
   border-top: none;
@@ -131,7 +131,13 @@ body {
 
 .me {
   width: 100%;
-  height: 65.7%;
+  height: 72.7%;
+}
+@media screen and (min-width: 600px) {
+  .me {
+    width: 100%;
+    height: 65.7%;
+  }
 }
 
 .part {
@@ -162,9 +168,11 @@ body {
 }
 
 .everyone {
+  height: 66px;
+  width: 256px;
+  margin-top: 1%;
   line-height: 33px;
   letter-spacing: 0.05em;
-  border-radius: nullpx;
   font-family: "Nunito Sans";
   text-align: left;
 }
@@ -173,8 +181,6 @@ body {
     height: 66px;
     width: 521px;
     margin-top: 6%;
-    border-radius: nullpx;
-    font-family: "Nunito Sans";
     font-size: 22px;
     font-weight: 300;
   }
@@ -183,7 +189,7 @@ body {
 .price {
   height: 36px;
   width: 112px;
-  margin-top: 6%;
+  margin-top: 16%;
   border-radius: nullpx;
   font-family: "Nunito Sans";
   font-size: 24px;
@@ -192,20 +198,35 @@ body {
   letter-spacing: 0.05em;
   text-align: left;
 }
+@media screen and (min-width: 600px) {
+  .price {
+    margin-top: 1%;
+  }
+}
 
 .two_buttons {
-  margin-top: 3%;
+  margin-top: 157%;
+}
+@media screen and (min-width: 600px) {
+  .two_buttons {
+    margin-top: 3%;
+  }
 }
 
 .button {
   position: absolute;
-  margin-top: 47px;
   background: #FE682F;
+  z-index: 2;
   height: 64px;
   width: 178px;
-  left: 172px;
-  top: 597px;
-  z-index: 2;
+  margin-top: 0px;
+}
+@media screen and (min-width: 600px) {
+  .button {
+    height: 64px;
+    width: 178px;
+    margin-top: 47px;
+  }
 }
 
 .backg {
@@ -214,15 +235,25 @@ body {
   height: 64px;
   width: 178px;
   z-index: 1;
+  margin-top: 15px;
+  margin-left: 15px;
+}
+@media screen and (min-width: 600px) {
+  .backg {
+    height: 64px;
+    width: 178px;
+    margin-top: 30px;
+    margin-left: 15px;
+  }
 }
 
 .picture_watch {
   border: 3px solid black;
-  height: 486px;
-  width: 327px;
+  height: 447px;
+  width: 336px;
   position: absolute;
-  margin-left: 56.4%;
-  margin-top: -44.4%;
+  margin-left: 0%;
+  margin-top: -77%;
   background-color: #FE682F;
 }
 @media screen and (min-width: 600px) {
@@ -236,8 +267,8 @@ body {
 
 .img {
   border-radius: 49%;
-  height: 486px;
-  width: 327px;
+  height: 100%;
+  width: 100%;
 }
 @media screen and (min-width: 600px) {
   .img {
@@ -275,21 +306,44 @@ body {
   position: absolute;
   transform: rotate(18.76deg);
   margin-left: 20%;
+  height: 45px;
+  width: 107px;
+  margin-left: 43%;
+}
+@media screen and (min-width: 600px) {
+  .arrow2 {
+    height: 68px;
+    width: 145px;
+    margin-left: 20%;
+  }
 }
 
 .footer {
   display: flex;
-  width: 100%;
-  height: 249px;
-  margin-top: -0.96%;
   border-top: 3px solid black;
+}
+@media screen and (min-width: 600px) {
+  .footer {
+    height: 29%;
+    width: 100%;
+    margin-top: -0.96%;
+  }
 }
 
 .dwnwatch {
-  height: 250px;
-  width: 231px;
-  margin-top: -1px;
+  height: 279px;
+  width: 331px;
+  margin-top: -84%;
+  margin-left: 14%;
   border-radius: 0px;
+}
+@media screen and (min-width: 600px) {
+  .dwnwatch {
+    margin-left: 0px;
+    height: 250px;
+    width: 231px;
+    margin-top: -1px;
+  }
 }
 
 .ever {
@@ -309,45 +363,83 @@ body {
 }
 
 .loki {
-  height: 121px;
-  width: 461px;
-  left: 404px;
-  top: 814px;
+  height: 397px;
+  width: 112px;
+  margin-left: -443%;
   font-family: "Nunito Sans";
-  font-size: 22px;
+  font-size: 17px;
   font-weight: 400;
   line-height: 45px;
   letter-spacing: 0.016em;
   text-align: left;
 }
+@media screen and (min-width: 600px) {
+  .loki {
+    margin-left: 0px;
+    height: 121px;
+    width: 461px;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 45px;
+    letter-spacing: 0.016em;
+    text-align: left;
+  }
+}
 
 .circle {
-  margin-right: -6%;
-  width: 50px;
-  height: 50px;
-  margin-top: -23%;
+  position: absolute;
+  margin-right: 159%;
+  width: 35px;
+  height: 35px;
+  margin-top: -78%;
   background-color: #FE682F;
   border-radius: 50%;
   border: 3px solid black;
 }
+@media screen and (min-width: 600px) {
+  .circle {
+    margin-right: 30%;
+    width: 50px;
+    height: 50px;
+    margin-top: -9%;
+  }
+}
 
 .fake_cir {
-  width: 50px;
-  height: 50px;
-  margin-right: -6%;
-  margin-top: -16%;
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  margin-top: -83%;
+  margin-right: 152%;
   background-color: white;
   border-radius: 50%;
   opacity: 0.5;
   border: 3px solid black;
+}
+@media screen and (min-width: 600px) {
+  .fake_cir {
+    width: 50px;
+    height: 50px;
+    margin-right: 29%;
+    margin-top: -6%;
+  }
 }
 
 .trending {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 32.1%;
+  width: 38.1%;
   background-color: yellow;
+  height: 394px;
+  margin-left: -63%;
+}
+@media screen and (min-width: 600px) {
+  .trending {
+    width: 32.1%;
+    height: 100%;
+    margin-left: 0px;
+  }
 }
 
 .trensp {
